plugins {
    id "java"
    id "jacoco"
}

group "uk.gov.di.authentication.deliveryreceiptsapi"
version "unspecified"

dependencies {
    implementation configurations.govuk_notify,
            configurations.lambda,
            configurations.gson,
            configurations.libphonenumber,
            configurations.cloudwatch

    implementation project(":shared")

    runtimeOnly configurations.logging_runtime

    testImplementation configurations.tests,
            configurations.lambda_tests,
            project(":shared-test"),
            configurations.lambda,
            configurations.dynamodb

    testRuntimeOnly configurations.test_runtime
}

test {
    useJUnitPlatform()
    environment "TRACING_ENABLED", "false"
}

task buildZip(type: Zip) {
    includeEmptyDirs = false
    preserveFileTimestamps = false
    reproducibleFileOrder = true

    from compileJava
    from processResources
    into("lib") {
        from configurations.runtimeClasspath.files.sort()
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
    dependsOn "test"
}
